WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
176771
[WebGL] VideoTextureCopierCV doesn't correctly restore vertex attribute state
https://bugs.webkit.org/show_bug.cgi?id=176771
Summary
[WebGL] VideoTextureCopierCV doesn't correctly restore vertex attribute state
Dean Jackson
Reported
2017-09-12 01:41:22 PDT
[WebGL] VideoTextureCopierCV doesn't correctly restore vertex attribute state
Attachments
Patch
(9.58 KB, patch)
2017-09-12 01:49 PDT
,
Dean Jackson
graouts
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2017-09-12 01:44:51 PDT
<
rdar://problem/34386621
>
Dean Jackson
Comment 2
2017-09-12 01:49:08 PDT
Created
attachment 320528
[details]
Patch
Dean Jackson
Comment 3
2017-09-12 12:29:47 PDT
Committed
r221933
: <
http://trac.webkit.org/changeset/221933
>
WebKit Commit Bot
Comment 4
2017-09-14 17:27:50 PDT
Re-opened since this is blocked by
bug 176969
Dean Jackson
Comment 5
2017-09-18 19:56:55 PDT
Committed
r222198
: <
http://trac.webkit.org/changeset/222198
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug